[workspace]
resolver = "2"
members = [
    "game",
    "koi",
    "koi/gpu",
    "shaders/imgui",
    "shaders/fragment",
    "shaders/gradient",
    "shaders/sky",
    "shaders/triangle",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))', 'cfg(spirv, values("vertex", "fragment", "compute"))'] }
