cargo-features = ["edition2024"]

[package]
name = "koi"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
glam = "0.30.0"
gpu-allocator = "0.27.0"
image = "0.25.5"
imgui = "0.12.0"
imgui-winit-support = { git = "https://github.com/christat/imgui-winit-support.git", version = "0.13" }
log = "0.4"
presser = "0.3.1"
winit = "0.30.9"

[build-dependencies]
glob = "0.3.2"
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git" }

# Compile build-dependencies in release mode with the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

[features]
default = ["vulkan", "debug"]
debug = []
vulkan = []
directx = []
